# py-horizon

./: .gitignore  .importlinter  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  README.md  mypy.ini  pyproject.toml
src/horizon/: __init__.py  app_orchestrator.py  container.py  main.py
src/horizon/l1_entities/: __init__.py  atmospheric_scattering.py  colors.py  exceptions.py  heuristics.py  models.py  sun.py
src/horizon/l1_entities/atmospheric/: __init__.py  atmospheric_scattering.py
src/horizon/l1_entities/color/: __init__.py  color_effects.py
src/horizon/l1_entities/core/: __init__.py  models.py  regimes.py
src/horizon/l1_entities/geo/: __init__.py  sun.py
src/horizon/l2_use_cases/: compute_sky_use_case.py
src/horizon/l2_use_cases/boundaries/: __init__.py  location_service.py  prefs_gateway.py  presenter.py  weather_provider_gateway.py
src/horizon/l3_interface_adapters/gateways/: cached_location_gateway.py  ip_location_gateway.py  (+3 more)
src/horizon/l4_frameworks_and_drivers/: __init__.py  menu_app.py  scheduler.py
tests/: __init__.py  test_atmospheric_scattering.py  test_heuristics.py  test_influence_toggles.py  test_location_service.py  test_pipeline.py  test_regimes.py  test_sun.py  test_sun_accuracy.py
tests/integration/: __init__.py  test_influence_toggles.py  test_pipeline.py
tests/unit/adapters/: __init__.py  test_location_service.py
tests/unit/entities/: __init__.py  test_atmospheric_scattering.py  test_heuristics.py  test_regimes.py  test_sun.py  test_sun_accuracy.py
tests/unit/frameworks/: __init__.py
tests/unit/use_cases/: __init__.py
(+1 files in other folders)
