[project]
name = "py-horizon"
version = "0.1.0"
description = "Menu bar sky gradient (offline)"
authors = [ { name = "Unknown" } ]
requires-python = ">=3.11"
dependencies = [
  "rumps",
  "watchdog"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy>=1.17.1", "pre-commit"]

[project.scripts]
py-horizon = "horizon.main:run_loop"
py-horizon-once = "horizon.main:run_once"


[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/horizon"]
